POCAM-64 fix column padding and alignment

--- a/html/themes/custom/common_design_subtheme/sass/pocam_custom/_fields.scss
+++ b/html/themes/custom/common_design_subtheme/sass/pocam_custom/_fields.scss
@@ -12,3 +12,16 @@
 .field__label {
   font-weight: 700;
 }
+
+// Add padding to layout builder 2 col layout.
+.node--type-pocam-extract .layout__region--second {
+  // Breakpoint from layout builder css.
+  @media screen and (min-width: 40em) {
+    padding-left: 2rem;
+  }
+}
+.node--type-pocam-extract .layout__region--first {
+  .field--name-field-text p:first-child {
+    margin-top: 0;
+  }
+}
